ApolloMac/compiler/compiler-master/compilerv1Parser.java
// Generated from compilerv1.g4 by ANTLR 4.13.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class compilerv1Parser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, IF=43, ELSE=44, WHILE=45, TYPE=46, 
		FTYPE=47, CLSTYPE=48, STATIC=49, VIRTUAL=50, INSTANCE_MODE=51, ANNOT_OVERRIDE=52, 
		ASYNC=53, OVERRIDE=54, SYSCALL=55, ALL=56, APND=57, ID=58, NATIVE=59, 
		INCLUSIVE=60, LBRACE=61, RBRACE=62, STRING=63, INT=64, WS=65, COMMENT=66;
	public static final int
		RULE_program = 0, RULE_importStmt = 1, RULE_instance = 2, RULE_instancepush = 3, 
		RULE_memberaccess = 4, RULE_instanceValue = 5, RULE_importPath = 6, RULE_headerPath = 7, 
		RULE_headerPart = 8, RULE_function = 9, RULE_method = 10, RULE_field = 11, 
		RULE_params = 12, RULE_param = 13, RULE_block = 14, RULE_classBody = 15, 
		RULE_structBody = 16, RULE_classMember = 17, RULE_structMember = 18, RULE_print = 19, 
		RULE_nativemode = 20, RULE_syscallStmt = 21, RULE_pointer = 22, RULE_include = 23, 
		RULE_returnType = 24, RULE_typeRef = 25, RULE_genericType = 26, RULE_functionType = 27, 
		RULE_functionTypeArgs = 28, RULE_macro = 29, RULE_stdin = 30, RULE_lambda = 31, 
		RULE_lambdaDefinition = 32, RULE_lambdaLiteral = 33, RULE_statement = 34, 
		RULE_ifStatement = 35, RULE_whileStatement = 36, RULE_assignment = 37, 
		RULE_assignTarget = 38, RULE_accessKey = 39, RULE_init = 40, RULE_expression = 41, 
		RULE_orExpr = 42, RULE_andExpr = 43, RULE_equalityExpr = 44, RULE_relationalExpr = 45, 
		RULE_addExpr = 46, RULE_multExpr = 47, RULE_primary = 48, RULE_indexedAccess = 49, 
		RULE_compositeLiteral = 50, RULE_functionCall = 51, RULE_args = 52, RULE_returnStmt = 53, 
		RULE_class = 54, RULE_struct = 55, RULE_interface = 56, RULE_inheritanceClause = 57, 
		RULE_inheritedType = 58, RULE_virtualMethod = 59;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "importStmt", "instance", "instancepush", "memberaccess", 
			"instanceValue", "importPath", "headerPath", "headerPart", "function", 
			"method", "field", "params", "param", "block", "classBody", "structBody", 
			"classMember", "structMember", "print", "nativemode", "syscallStmt", 
			"pointer", "include", "returnType", "typeRef", "genericType", "functionType", 
			"functionTypeArgs", "macro", "stdin", "lambda", "lambdaDefinition", "lambdaLiteral", 
			"statement", "ifStatement", "whileStatement", "assignment", "assignTarget", 
			"accessKey", "init", "expression", "orExpr", "andExpr", "equalityExpr", 
			"relationalExpr", "addExpr", "multExpr", "primary", "indexedAccess", 
			"compositeLiteral", "functionCall", "args", "returnStmt", "class", "struct", 
			"interface", "inheritanceClause", "inheritedType", "virtualMethod"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "';'", "'extern'", "'-cpp'", "'instance'", "'='", "'.'", "'push'", 
			"'('", "')'", "'*'", "'/'", "'\\'", "'-'", "'__construct'", "'__destruct'", 
			"','", "'sys'", "'stdout'", "'println'", "'_'", "'&'", "'void'", "'<'", 
			"'>'", "'fn'", "'extern [&macro]'", "'stdin('", "'lmd->'", "'['", "']'", 
			"'||'", "'&&'", "'=='", "'!='", "'<='", "'>='", "'+'", "'%'", "'return'", 
			"'class'", "'struct'", "'itr'", "'if'", "'else'", "'while'", null, null, 
			null, "'static'", "'virtual'", null, "'@Override'", "'async'", "'override'", 
			"'syscall'", "'recursive'", "'apnd'", null, null, null, "'{'", "'}'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, "IF", "ELSE", "WHILE", "TYPE", 
			"FTYPE", "CLSTYPE", "STATIC", "VIRTUAL", "INSTANCE_MODE", "ANNOT_OVERRIDE", 
			"ASYNC", "OVERRIDE", "SYSCALL", "ALL", "APND", "ID", "NATIVE", "INCLUSIVE", 
			"LBRACE", "RBRACE", "STRING", "INT", "WS", "COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "compilerv1.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public compilerv1Parser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(compilerv1Parser.EOF, 0); }
		public List<ImportStmtContext> importStmt() {
			return getRuleContexts(ImportStmtContext.class);
		}
		public ImportStmtContext importStmt(int i) {
			return getRuleContext(ImportStmtContext.class,i);
		}
		public List<IncludeContext> include() {
			return getRuleContexts(IncludeContext.class);
		}
		public IncludeContext include(int i) {
			return getRuleContext(IncludeContext.class,i);
		}
		public List<FunctionContext> function() {
			return getRuleContexts(FunctionContext.class);
		}
		public FunctionContext function(int i) {
			return getRuleContext(FunctionContext.class,i);
		}
		public List<MacroContext> macro() {
			return getRuleContexts(MacroContext.class);
		}
		public MacroContext macro(int i) {
			return getRuleContext(MacroContext.class,i);
		}
		public List<ClassContext> class_() {
			return getRuleContexts(ClassContext.class);
		}
		public ClassContext class_(int i) {
			return getRuleContext(ClassContext.class,i);
		}
		public List<StructContext> struct() {
			return getRuleContexts(StructContext.class);
		}
		public StructContext struct(int i) {
			return getRuleContext(StructContext.class,i);
		}
		public List<InterfaceContext> interface_() {
			return getRuleContexts(InterfaceContext.class);
		}
		public InterfaceContext interface_(int i) {
			return getRuleContext(InterfaceContext.class,i);
		}
		public List<InitContext> init() {
			return getRuleContexts(InitContext.class);
		}
		public InitContext init(int i) {
			return getRuleContext(InitContext.class,i);
		}
		public List<LambdaContext> lambda() {
			return getRuleContexts(LambdaContext.class);
		}
		public LambdaContext lambda(int i) {
			return getRuleContext(LambdaContext.class,i);
		}
		public List<InstanceContext> instance() {
			return getRuleContexts(InstanceContext.class);
		}
		public InstanceContext instance(int i) {
			return getRuleContext(InstanceContext.class,i);
		}
		public List<InstancepushContext> instancepush() {
			return getRuleContexts(InstancepushContext.class);
		}
		public InstancepushContext instancepush(int i) {
			return getRuleContext(InstancepushContext.class,i);
		}
		public List<MemberaccessContext> memberaccess() {
			return getRuleContexts(MemberaccessContext.class);
		}
		public MemberaccessContext memberaccess(int i) {
			return getRuleContext(MemberaccessContext.class,i);
		}
		public List<NativemodeContext> nativemode() {
			return getRuleContexts(NativemodeContext.class);
		}
		public NativemodeContext nativemode(int i) {
			return getRuleContext(NativemodeContext.class,i);
		}
		public List<SyscallStmtContext> syscallStmt() {
			return getRuleContexts(SyscallStmtContext.class);
		}
		public SyscallStmtContext syscallStmt(int i) {
			return getRuleContext(SyscallStmtContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof compilerv1Listener ) ((compilerv1Listener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof compilerv1Listener ) ((compilerv1Listener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof compilerv1Visitor ) return ((compilerv1Visitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(138);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 335736975157886980L) != 0)) {
				{
				setState(136);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
				case 1:
					{
					setState(120);
					importStmt();
					}
					break;
				case 2:
					{
					setState(121);
					include();
					}
					break;
				case 3:
					{
					setState(122);
					function();
					}
					break;
				case 4:
					{
					setState(123);
					macro();
					}
					break;
				case 5:
					{
					setState(124);
					class_();
					}
					break;
				case 6:
					{
					setState(125);
					struct();
					}
					break;
				case 7:
					{
					setState(126);
					interface_();
					}
					break;
				case 8:
					{
					setState(127);
					init();
					}
					break;
				case 9:
					{
					setState(128);
					lambda();
					}
					break;
				case 10:
					{
					setState(129);
					instance();
					}
					break;
				case 11:
					{
					setState(130);
					instancepush();
					}
					break;
				case 12:
					{
					setState(131);
					memberaccess();
					setState(132);
					match(T__0);
					}
					break;
				case 13:
					{
					setState(134);
					nativemode();
					}
					break;
				case 14:
					{
					setState(135);
					syscallStmt();
					}
					break;
				}
				}
				setState(140);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(141);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ImportStmtContext extends ParserRuleContext {
		public TerminalNode STRING() { return getToken(compilerv1Parser.STRING, 0); }
		public ImportPathContext importPath() {
			return getRuleContext(ImportPathContext.class,0);
		}
		public HeaderPathContext headerPath() {
			return getRuleContext(HeaderPathContext.class,0);
		}
		public ImportStmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_importStmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof compilerv1Listener ) ((compilerv1Listener)listener).enterImportStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof compilerv1Listener ) ((compilerv1Listener)listener).exitImportStmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof compilerv1Visitor ) return ((compilerv1Visitor<? extends T>)visitor).visitImportStmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ImportStmtContext importStmt() throws RecognitionException {
		ImportStmtContext _localctx = new ImportStmtContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_importStmt);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(143);
			match(T__1);
			setState(147);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				{
				setState(144);
				match(STRING);
				}
				break;
			case 2:
				{
				setState(145);
				importPath();
				}
				break;
			case 3:
				{
				setState(146);
				headerPath();
				}
				break;
			}
			setState(152);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__2) {
				{
				{
				setState(149);
				match(T__2);
				}
				}
				setState(154);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(156);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__0) {
				{
				setState(155);
				match(T__0);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class InstanceContext extends ParserRuleContext {
		public TerminalNode INSTANCE_MODE() { return getToken(compilerv1Parser.INSTANCE_MODE, 0); }
		public TerminalNode ID() { return getToken(compilerv1Parser.ID, 0); }
		public InstanceValueContext instanceValue() {
			return getRuleContext(InstanceValueContext.class,0);
		}
		public InstanceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_instance; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof compilerv1Listener ) ((compilerv1Listener)listener).enterInstance(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof compilerv1Listener ) ((compilerv1Listener)listener).exitInstance(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof compilerv1Visitor ) return ((compilerv1Visitor<? extends T>)visitor).visitInstance(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InstanceContext instance() throws RecognitionException {
		InstanceContext _localctx = new InstanceContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_instance);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(158);
			match(INSTANCE_MODE);
			setState(159);
			match(T__3);
			setState(160);
			match(ID);
			setState(163);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__4) {
				{
				setState(161);
				match(T__4);
				setState(162);
				instanceValue();
				}
			}

			setState(165);
			match(T__0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class InstancepushContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(compilerv1Parser.ID, 0); }
		public InstanceValueContext instanceValue() {
			return getRuleContext(InstanceValueContext.class,0);
		}
		public InstancepushContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_instancepush; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof compilerv1Listener ) ((compilerv1Listener)listener).enterInstancepush(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof compilerv1Listener ) ((compilerv1Listener)listener).exitInstancepush(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof compilerv1Visitor ) return ((compilerv1Visitor<? extends T>)visitor).visitInstancepush(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InstancepushContext instancepush() throws RecognitionException {
		InstancepushContext _localctx = new InstancepushContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_instancepush);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(167);
			match(ID);
			setState(168);
			match(T__5);
			setState(169);
			match(T__6);
			setState(170);
			match(T__7);
			setState(171);
			instanceValue();
			setState(172);
			match(T__8);
			setState(173);
			match(T__0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MemberaccessContext extends ParserRuleContext {
		public List<TerminalNode> ID() { return getTokens(compilerv1Parser.ID); }
		public TerminalNode ID(int i) {
			return getToken(compilerv1Parser.ID, i);
		}
		public FunctionCallContext functionCall() {
			return getRuleContext(FunctionCallContext.class,0);
		}
		public MemberaccessContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_memberaccess; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof compilerv1Listener ) ((compilerv1Listener)listener).enterMemberaccess(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof compilerv1Listener ) ((compilerv1Listener)listener).exitMemberaccess(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof compilerv1Visitor ) return ((compilerv1Visitor<? extends T>)visitor).visitMemberaccess(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MemberaccessContext memberaccess() throws RecognitionException {
		MemberaccessContext _localctx = new MemberaccessContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_memberaccess);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(175);
			match(ID);
			setState(176);
			match(T__5);
			setState(179);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				{
				setState(177);
				functionCall();
				}
				break;
			case 2:
				{
				setState(178);
				match(ID);
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class InstanceValueContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(compilerv1Parser.ID, 0); }
		public TerminalNode LBRACE() { return getToken(compilerv1Parser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(compilerv1Parser.RBRACE, 0); }
		public ArgsContext args() {
			return getRuleContext(ArgsContext.class,0);
		}
		public InstanceValueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_instanceValue; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof compilerv1Listener ) ((compilerv1Listener)listener).enterInstanceValue(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof compilerv1Listener ) ((compilerv1Listener)listener).exitInstanceValue(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof compilerv1Visitor ) return ((compilerv1Visitor<? extends T>)visitor).visitInstanceValue(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InstanceValueContext instanceValue() throws RecognitionException {
		InstanceValueContext _localctx = new InstanceValueContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_instanceValue);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(181);
			match(ID);
			setState(182);
			match(LBRACE);
			setState(184);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (((((_la - 8)) & ~0x3f) == 0 && ((1L << (_la - 8)) & 109212290963767297L) != 0)) {
				{
				setState(183);
				args();
				}
			}

			setState(186);
			match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ImportPathContext extends ParserRuleContext {
		public List<TerminalNode> ID() { return getTokens(compilerv1Parser.ID); }
		public TerminalNode ID(int i) {
			return getToken(compilerv1Parser.ID, i);
		}
		public ImportPathContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_importPath; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof compilerv1Listener ) ((compilerv1Listener)listener).enterImportPath(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof compilerv1Listener ) ((compilerv1Listener)listener).exitImportPath(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof compilerv1Visitor ) return ((compilerv1Visitor<? extends T>)visitor).visitImportPath(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ImportPathContext importPath() throws RecognitionException {
		ImportPathContext _localctx = new ImportPathContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_importPath);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(188);
			_la = _input.LA(1);
			if ( !(_la==T__9 || _la==ID) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(193);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__5) {
				{
				{
				setState(189);
				match(T__5);
				setState(190);
				_la = _input.LA(1);
				if ( !(_la==T__9 || _la==ID) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
				}
				setState(195);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class HeaderPathContext extends ParserRuleContext {
		public List<HeaderPartContext> headerPart() {
			return getRuleContexts(HeaderPartContext.class);
		}
		public HeaderPartContext headerPart(int i) {
			return getRuleContext(HeaderPartContext.class,i);
		}
		public HeaderPathContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_headerPath; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof compilerv1Listener ) ((compilerv1Listener)listener).enterHeaderPath(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof compilerv1Listener ) ((compilerv1Listener)listener).exitHeaderPath(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof compilerv1Visitor ) return ((compilerv1Visitor<? extends T>)visitor).visitHeaderPath(this);
			else return visitor.visitChildren(this);
		}
	}

	public final HeaderPathContext headerPath() throws RecognitionException {
		HeaderPathContext _localctx = new HeaderPathContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_headerPath);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(196);
			headerPart();
			setState(199); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(197);
				_la = _input.LA(1);
				if ( !(_la==T__10 || _la==T__11) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(198);
				headerPart();
				}
				}
				setState(201); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==T__10 || _la==T__11 );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
